[gd_scene load_steps=14 format=1]

[ext_resource path="res://Scenes/Events/enemy_2.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Charasets/enemy_2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Effects/sangre.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Events/enemy_die_sample_player.tres" type="SampleLibrary" id=4]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( 8.90625, -8.09232, 8.57639, -19.4815, 23.6279, -19.5115, 26.7188, 8.39203 )

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( 2.63889, -0.899147, 8.90625, -8.09232, 26.7188, 8.39203, 20.1215, 15.8849, 5.27778, 15.5852, 0.989584, 8.09231 )

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( -3.29861, -5.99431, 2.63889, -0.899147, 0.989584, 8.09231, -7.91667, 2.09801, -8.24653, -3.59659 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 7.54856, 38.3532 )

[sub_resource type="ConvexPolygonShape2D" id=5]

custom_solver_bias = 0.0
points = Vector2Array( 8.90625, -8.09232, 8.57639, -19.4815, 23.744, -19.0929, 26.7188, 8.39203 )

[sub_resource type="ConvexPolygonShape2D" id=6]

custom_solver_bias = 0.0
points = Vector2Array( 2.63889, -0.899147, 8.90625, -8.09232, 26.7188, 8.39203, 20.1215, 15.8849, 5.27778, 15.5852, 0.989584, 8.09231 )

[sub_resource type="ConvexPolygonShape2D" id=7]

custom_solver_bias = 0.0
points = Vector2Array( -3.29861, -5.99431, 2.63889, -0.899147, 0.989584, 8.09231, -7.91667, 2.09801, -8.24653, -3.59659 )

[sub_resource type="Animation" id=8]

resource/name = "walk"
length = 0.4
loop = true
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="ColorRamp" id=9]

offsets = FloatArray( 0, 1 )
colors = ColorArray( 0.773438, 0.773438, 0.773438, 1, 0.1875, 0.1875, 0.1875, 1 )

[node name="KinematicBody2D 2" type="KinematicBody2D" groups=[
"enemy",
"enemy_1",
]]

transform/pos = Vector2( 64.3, -80 )
transform/scale = Vector2( 2, 2 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1.68421, 0, 0, 1.85361, -19.4444, 6.66667 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1.68421, 0, 0, 1.85361, -19.4444, 6.66667 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 3 )
shapes/2/transform = Matrix32( 1.68421, 0, 0, 1.85361, -19.4444, 6.66667 )
shapes/2/trigger = false
collision/layers = 5
collision/mask = 4
collision/margin = 0.08
script/script = ExtResource( 1 )
velocity = 350
dir_left = true
life = 2
damage = 1

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]

transform/pos = Vector2( -19.4444, 6.66667 )
transform/scale = Vector2( 1.68421, 1.85361 )
build_mode = 0
polygon = Vector2Array( 8.57639, -19.4815, 8.90625, -8.09232, 2.63889, -0.899147, -3.29861, -5.99431, -8.24653, -3.59659, -7.91667, 2.09801, 0.989584, 8.09231, 5.27778, 15.5852, 20.1215, 15.8849, 26.7188, 8.39203, 23.6279, -19.5115 )
shape_range = Vector2( 0, 2 )
trigger = false

[node name="area_head" type="Area2D" parent="."]

transform/pos = Vector2( 7.35, -34.75 )
transform/scale = Vector2( 0.5, 0.148438 )
input/pickable = false
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 2.41445, 0, 0, 0.77017, 0.581818, 2.46155 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 0.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false
collision/layers = 4
collision/mask = 34

[node name="CollisionShape2D1" type="CollisionShape2D" parent="area_head"]

transform/pos = Vector2( 0.581818, 2.46155 )
transform/scale = Vector2( 2.41445, 0.77017 )
shape = SubResource( 4 )
trigger = true
_update_shape_index = 0

[node name="area_body" type="Area2D" parent="."]

transform/pos = Vector2( -4.07679, 1.11111 )
transform/scale = Vector2( 0.9363, 1.08512 )
input/pickable = false
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1.79879, 0, 0, 1.7082, -16.6219, 4.86533 )
shapes/0/trigger = true
shapes/1/shape = SubResource( 6 )
shapes/1/transform = Matrix32( 1.79879, 0, 0, 1.7082, -16.6219, 4.86533 )
shapes/1/trigger = true
shapes/2/shape = SubResource( 7 )
shapes/2/transform = Matrix32( 1.79879, 0, 0, 1.7082, -16.6219, 4.86533 )
shapes/2/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 0.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false
collision/layers = 0
collision/mask = 34

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="area_body"]

transform/pos = Vector2( -16.6219, 4.86533 )
transform/scale = Vector2( 1.79879, 1.7082 )
build_mode = 0
polygon = Vector2Array( 8.57639, -19.4815, 8.90625, -8.09232, 2.63889, -0.899147, -3.29861, -5.99431, -8.24653, -3.59659, -7.91667, 2.09801, 0.989584, 8.09231, 5.27778, 15.5852, 20.1215, 15.8849, 26.7188, 8.39203, 23.744, -19.0929 )
shape_range = Vector2( 0, 2 )
trigger = true

[node name="sprite" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 7.90835, 7.78536 )
texture = ExtResource( 2 )
vframes = 6
hframes = 6
frame = 4

[node name="animation" type="AnimationPlayer" parent="sprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/walk = SubResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "walk"

[node name="hit_ray_particle" type="Particles2D" parent="."]

transform/pos = Vector2( 7.65098, 1.11111 )
transform/scale = Vector2( 0.296685, 0.329861 )
config/amount = 100
config/lifetime = 1.0
config/emit_timeout = 0.2
config/emitting = false
config/process_mode = 1
config/half_extents = Vector2( 40, 40 )
config/local_space = false
config/explosiveness = 0.2
config/texture = ExtResource( 3 )
params/direction = 88.89
params/spread = 180.0
params/linear_velocity = 200.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 400.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 2.0
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/direction = 0.29
randomness/spread = 0.8
randomness/linear_velocity = 0.45
color/color_ramp = SubResource( 9 )

[node name="sound" type="SamplePlayer2D" parent="."]

params/volume_db = 5.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 2.92817
config/polyphony = 3
config/samples = ExtResource( 4 )
config/pitch_random = 0.135

[node name="shooter" type="Position2D" parent="."]

transform/pos = Vector2( -15, 5.53392 )

[node name="Timer" type="Timer" parent="shooter"]

process_mode = 0
wait_time = 1.5
one_shot = false
autostart = true

[connection signal="body_enter" from="area_head" to="." method="_on_area_head_body_enter"]

[connection signal="body_enter" from="area_body" to="." method="_on_area_body_body_enter"]

[connection signal="timeout" from="shooter/Timer" to="." method="_on_Timer_timeout"]


